# acute-app

./: CLAUDE.md
acute-api/: .env.example  docker-compose.yml  pyproject.toml
acute-api/alembic/: env.py
acute-api/alembic/versions/: 0001_enable_pgvector.py  0002_doctor_onboarding.py
acute-api/app/: main.py
acute-api/app/api/: deps.py
acute-api/app/api/v1/: router.py
acute-api/app/api/v1/endpoints/: auth.py  catalog.py  doctors.py  educations.py  experiences.py  health.py  hospitals.py  otp.py  specialities.py  working_hours.py
acute-api/app/core/: config.py  exceptions.py  security.py
acute-api/app/db/: base.py  redis.py  session.py
acute-api/app/models/: __init__.py  catalog.py  doctor.py  education.py  experience.py  hospital.py  speciality.py  working_hours.py
acute-api/app/schemas/: auth.py  catalog.py  doctor.py  education.py  experience.py  hospital.py  otp.py  speciality.py  working_hours.py
acute-api/app/services/: msg91.py  profile.py
acute-api/doc/: README.md
acute-api/doc/v1/: auth.md  catalog.md  doctors.md  health.md  hospitals.md  otp.md
acute-api/tests/: conftest.py  test_config.py  test_deps.py  test_models.py  test_profile_service.py  test_security.py
acute-api/tests/api/v1/: test_auth_login.py  test_catalog.py  test_doctors_me.py  test_educations.py  test_experiences.py  test_health.py  test_hospitals.py  test_otp.py  test_specialities.py  test_working_hours.py
acute-api/tests/db/: test_redis.py  test_session.py
acute-api/tests/schemas/: test_otp_schema.py
acute-api/tests/services/: test_msg91_service.py
(+105 files in other folders)
